--- a/Test-2/src/app/components/home/home.component.html
+++ b/Test-2/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
       data-bs-toggle="dropdown"
       aria-expanded="false"
     >
-      Select Project
+       Project
     </button>
     <div class="dropdown-menu" aria-labelledby="program-dropdown">
       <label for="prog-check" *ngFor="let proj of selectedProjects">
